# lbp

./: .gitignore  .gitmodules  CMakeLists.txt  assets.cpp  assets.h  block.cpp  block.h  bolt.cpp  bolt.h  box2d.h  editor.cpp  editor.h  input.cpp  input.h  level.cpp  level.h  main.cpp  main.h  material.cpp  material.h  mem.cpp  mem.h  objList.h  player.cpp  player.h  util.h
audio/: audio.cpp  audio.h
common/: mem.cpp  mem.h  resManager.h  util.cpp  util.h
polygon/: geoutil.cpp  geoutil.h  polygon.cpp  polygon.h
renderer/: framebuffer.cpp  framebuffer.h  mesh.cpp  mesh.h  opengl.h  renderer.cpp  renderer.h  shader.cpp  shader.h  stb_image.h  texture.cpp  texture.h
res/levels/: test.json
res/mats/: data.json
res/mats/factory-metal/: texgen.blend
res/mats/rust/: texgen.blend
res/model-mats/starlight/: model.blend
res/models/: bolt.blend  bolt.mtl
